my profile page

--- a/index.html
+++ b/index.html
@@ -33,14 +33,15 @@
     </div>
 
     <div class="card_white">
-      <h2>Always technophile, in fact a bit of a geek</h2>
-      <p>Started coding the hard way - in another century; after punch cards, but in the golden age of Assembly language, Fortran and Pascal</p>
+      <h2>Always a technophile, in fact a bit of a geek...</h2>
+      <p>Started coding the hard way - in another century; in the golden age of Assembly language, Fortran and Pascal</p>
+      <p>so becoming an angel investor came naturally</p>
     </div>
 
     <div class="card_white">
-      <h2>Always keeping time for my friends at the lifeboats ...</h2>
+      <h2>Always keeping time for my friends in the lifeboats ...</h2>
       <img src="../images/sns142.jpg" alt="Pictute of Lifeboat">
-      <p>A great cause I have supported for many years with time & money</p>
+      <p>A great cause I have supported for many years (time & money)</p>
       <div class="blue_button text_center">
       <a href="http://www.snsm.org/">Check out the SNSM's website</a>
     </div>
