--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="card_white">
       <h1>Hi, I'm PH</h1>
       <h4>A.k.a Pierre-Henri Denain</h4>
-      <img src="images/PicPH.jpg" alt="Pictute PH Denain" class="first_image">
+      <img src="../images/PicPH.jpg" alt="Pictute PH Denain" class="first_image">
       <h5>Banker, (Angel) Investor, Advisor, Board Member ...</h5>
       <h5>and now developper</h5>
     </div>
@@ -33,15 +33,14 @@
     </div>
 
     <div class="card_white">
-      <h2>Always a technophile, in fact a bit of a geek...</h2>
-      <p>Started coding the hard way - in another century; in the golden age of Assembly language, Fortran and Pascal</p>
-      <p>so becoming an angel investor came naturally</p>
+      <h2>Always technophile, in fact a bit of a geek</h2>
+      <p>Started coding the hard way - in another century; after punch cards, but in the golden age of Assembly language, Fortran and Pascal</p>
     </div>
 
     <div class="card_white">
-      <h2>Always keeping time for my friends in the lifeboats ...</h2>
-      <img src="images/sns142.jpg" alt="Pictute of Lifeboat">
-      <p>A great cause I have supported for many years (time & money)</p>
+      <h2>Always keeping time for my friends at the lifeboats ...</h2>
+      <img src="../images/sns142.jpg" alt="Pictute of Lifeboat">
+      <p>A great cause I have supported for many years with time & money</p>
       <div class="blue_button text_center">
       <a href="http://www.snsm.org/">Check out the SNSM's website</a>
     </div>
