profile : remove typo

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
 
     <div class="card_white">
-      <h2>Always technophile, in fact a bit of a geek</h2>
+      <h2>Always a technophile, in fact a bit of a geek</h2>
       <p>Started coding the hard way - in another century; after punch cards, but in the golden age of Assembly language, Fortran and Pascal</p>
     </div>
 
